<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_text">Inventory is empty.\nClick the \'+\' button to add an item.</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_email">Supplier email</string>
    <string name="item_image">Item Image URL</string>
    <string name="sale">Sale</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="error_saving">Error Saving Item</string>
    <string name="item_saved">Item Saved!</string>
    <string name="price_text">Price:</string>
    <string name="quantity_text">Quantity:</string>
    <string name="error_updating">Error Updating Item</string>
    <string name="item_updated">Item Updated!</string>
    <string name="error_deleting">Error Deleting Item</string>
    <string name="item_deleted">Item Successfully Deleted</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="action_reorder">Order More</string>
    <string name="enter_valid_info">Please enter valid information</string>
    <string name="delete_confirmation">Are you sure you want to Delete this item?</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="delete_item">Delete Item</string>
</resources>
