<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/InfoText"
            android:text="@string/item_name"/>
        <EditText
            android:id="@+id/edit_item_name"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint=""
            android:inputType="textCapWords"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/InfoText"
            android:text="@string/item_price"/>
        <EditText
            android:id="@+id/edit_item_price"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint=""
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/InfoText"
            android:text="@string/quantity"/>

        <Button
            android:id="@+id/decrease_quantity"
            android:text="@string/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edit_item_quantity"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"/>
        <Button
            android:id="@+id/increase_quantity"
            android:text="@string/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/InfoText"
            android:text="@string/supplier_email"/>
        <EditText
            android:id="@+id/edit_item_supplier"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint=""
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/InfoText"
            android:text="@string/item_image"/>
        <EditText
            android:id="@+id/edit_item_image"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint=""
            android:inputType="textUri"/>

    </LinearLayout>

</LinearLayout>
